# gooseberry

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog  LICENSE  README.md  configure  mkpkg.sh
include/: CMakeLists.txt  gooseberry.h
src/: CMakeLists.txt  analyze.c  analyze.h  base.c  base.h  blas.c  blas.h  cgd.c  cgd.h  cholesky.c  cholesky.h  gooseberry.c  gooseberry_bin.c  io.c  io.h  matrix.c  matrix.h  permute.c  permute.h  sgd.c  sgd.h  transform.c  transform.h
src/mpi/: CMakeLists.txt  spmspm.c  spmv.c
test/: blas_rdm_sparsify.c  blas_rdm_zero.c  blas_rdv_sparsify.c  blas_rdv_zero.c  test.c  test.h
